--- a/ChatSDKUI/Interface/Profile.storyboard
+++ b/ChatSDKUI/Interface/Profile.storyboard
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="S0e-Qh-Mjd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="S0e-Qh-Mjd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -124,76 +122,6 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fPp-Dw-LET">
-                                        <rect key="frame" x="0.0" y="154" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fPp-Dw-LET" id="jFu-dI-s9x">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLn-qd-LKf">
-                                                    <rect key="frame" x="59" y="7" width="296" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="0wL-0S-FzW"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next"/>
-                                                    <connections>
-                                                        <outlet property="delegate" destination="S0e-Qh-Mjd" id="nz6-HK-maM"/>
-                                                    </connections>
-                                                </textField>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn_36_phone.png" translatesAutoresizingMaskIntoConstraints="NO" id="HES-fj-vpu">
-                                                    <rect key="frame" x="8" y="4" width="36" height="36"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" priority="900" constant="36" id="2E1-wc-lyS"/>
-                                                        <constraint firstAttribute="height" constant="36" id="yfj-Vj-CCA"/>
-                                                    </constraints>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="jLn-qd-LKf" secondAttribute="trailing" constant="20" id="LvE-o4-4A4"/>
-                                                <constraint firstAttribute="centerY" secondItem="HES-fj-vpu" secondAttribute="centerY" id="Ywt-yc-igq"/>
-                                                <constraint firstItem="HES-fj-vpu" firstAttribute="leading" secondItem="jFu-dI-s9x" secondAttribute="leading" constant="8" id="cAU-mN-Rtc"/>
-                                                <constraint firstItem="jLn-qd-LKf" firstAttribute="leading" secondItem="HES-fj-vpu" secondAttribute="trailing" constant="15" id="fWS-UR-5rE"/>
-                                                <constraint firstAttribute="centerY" secondItem="jLn-qd-LKf" secondAttribute="centerY" id="rYh-cT-Zbm"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="2qf-Qm-axE">
-                                        <rect key="frame" x="0.0" y="198" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2qf-Qm-axE" id="EPg-VN-iqf">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5rN-rQ-91R">
-                                                    <rect key="frame" x="59" y="7" width="296" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="BO8-Hu-M48"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="done"/>
-                                                    <connections>
-                                                        <outlet property="delegate" destination="S0e-Qh-Mjd" id="qgE-Nb-4Wl"/>
-                                                    </connections>
-                                                </textField>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icn_36_email.png" translatesAutoresizingMaskIntoConstraints="NO" id="LrI-gN-jQ6">
-                                                    <rect key="frame" x="8" y="4" width="36" height="36"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="36" id="Am5-sm-cLa"/>
-                                                        <constraint firstAttribute="width" priority="900" constant="36" id="O34-ub-2RZ"/>
-                                                    </constraints>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="5rN-rQ-91R" secondAttribute="trailing" constant="20" id="5ir-vq-Ut5"/>
-                                                <constraint firstAttribute="centerY" secondItem="5rN-rQ-91R" secondAttribute="centerY" id="9Jq-VW-JEz"/>
-                                                <constraint firstItem="5rN-rQ-91R" firstAttribute="leading" secondItem="LrI-gN-jQ6" secondAttribute="trailing" constant="15" id="CK6-pe-r3a"/>
-                                                <constraint firstItem="LrI-gN-jQ6" firstAttribute="leading" secondItem="EPg-VN-iqf" secondAttribute="leading" constant="8" id="OUr-bg-npd"/>
-                                                <constraint firstAttribute="centerY" secondItem="LrI-gN-jQ6" secondAttribute="centerY" id="lvO-fY-zeP"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -206,23 +134,17 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="cell0" destination="xLb-n9-a5M" id="6XA-8a-7CO"/>
-                        <outlet property="emailCell" destination="2qf-Qm-axE" id="Lq1-IY-djC"/>
-                        <outlet property="emailField" destination="5rN-rQ-91R" id="0wf-ic-oCz"/>
-                        <outlet property="emailImageView" destination="LrI-gN-jQ6" id="hSp-oS-A8u"/>
                         <outlet property="leftActionButton" destination="D60-Pb-WCA" id="wtw-pK-wUl"/>
                         <outlet property="nameCell" destination="P7g-yo-UhE" id="LSf-HA-Afs"/>
                         <outlet property="nameField" destination="fLk-Vs-HfW" id="TAC-iR-ZUU"/>
                         <outlet property="nameImageView" destination="fay-EN-v1F" id="iOz-fP-ClR"/>
-                        <outlet property="phoneNumberCell" destination="fPp-Dw-LET" id="AHA-vl-izj"/>
-                        <outlet property="phoneNumberField" destination="jLn-qd-LKf" id="8Et-gr-l8e"/>
-                        <outlet property="phoneNumberImageView" destination="HES-fj-vpu" id="2j9-Gl-kbd"/>
                         <outlet property="profilePictureButton" destination="OfV-Y5-yv1" id="oxU-De-Wh2"/>
                         <outlet property="rightActionButton" destination="30M-Bh-PZ3" id="7or-68-IAw"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pey-Dk-Pyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="642" y="52"/>
+            <point key="canvasLocation" x="1027.2" y="46.776611694152926"/>
         </scene>
     </scenes>
     <resources>
@@ -944,8 +866,6 @@ ALsAvQC/AMQA2wDdAN+l2aXepeml8qYFpgmmFKYdpiKmKqYtpjKmQaZFpkymVKZhpmamaKZqpm+md6Z6
 pn+mh6aKppymn6akAAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAApqY
 </mutableData>
         </image>
-        <image name="icn_36_email.png" width="36" height="36"/>
         <image name="icn_36_name.png" width="36" height="36"/>
-        <image name="icn_36_phone.png" width="36" height="36"/>
     </resources>
 </document>
